# domain-electrochemistry

./: .buildinfo  .gitignore  .project  CONTRIBUTING.md  FAIR.md  README.md  catalog-v001.xml  computerscience_bigmap_temp.ttl  config.yml  context.json  electrochemicalquantities.ttl  electrochemistry-dependencies.ttl  electrochemistry-manufacturing.ttl  electrochemistry-quantities.ttl  electrochemistry-reference.ttl  electrochemistry-testing.ttl  electrochemistry.html  electrochemistry.ttl  emmo-concepts.ttl  genindex.html  index.html  isq_bigmap.ttl  isq_bigmap_temp.ttl  material.ttl  material_bigmap_temp.ttl  objects.inv  pyproject.toml  requirements-docs.txt  requirements.txt  search.html  searchindex.js  unitsextension_bigmap.ttl
.doctrees/: electrochemistry.doctree  index.doctree
.github/: CONTRIBUTING.md  ontology_config.py
_sources/: electrochemistry.rst.txt  index.rst.txt
_static/: pygments.css
application/: catalog-v001.xml
cache/: w3id.org_emmo_domain_electrochemistry_context.json
context/: context.json
deprecated/: emmo-concepts.ttl  material_bigmap_temp.ttl  unitsextension_bigmap.ttl
doc/: .gitignore  README.md  classes.md  electrochemistry-meta.yaml  electrochemistry.md  mkdoc.sh  pandoc-options.yaml  prepare-pages.sh  update-pages.sh
docs/: .gitignore  about.html  conf.py  electrochemistry.html  electrochemistry.rst  electrochemistry.ttl  index.html  index.rst  requirements.txt  ttl_to_context.py
examples/: example_alkaline_electrochemical_cell.html  example_aqueous_electrolyte_KOH.html  example_cyclic_voltammetry.html  (+7 more)
pages/: faq.html  (+8 more)
(+923 files in other folders)
