[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "domain-electrochemistry-tooling"
version = "0.0.0"
description = "Tooling dependencies for the domain-electrochemistry ontology (EMMO domain)."
requires-python = ">=3.9"
dependencies = [
  "EMMOntoPy>=0.8.0,<0.9.0",
  "rdflib",
  "owlrl",
  "PyYAML",
  "requests",
  "jupyter",
  "ipykernel",
]

[project.optional-dependencies]
docs = [
  "Sphinx>=7.2,<9",
  "pydata-sphinx-theme==0.16.1",
  "sphinx-design",
  "nbsphinx",
  "sphinx-copybutton",
  "Pygments==2.17.2",
  "accessible-pygments==0.0.4",
  "beautifulsoup4==4.12.2",
  "soupsieve==2.4.1",
  "Babel==2.14.0",
  "snowballstemmer==2.2.0",
  "docutils==0.19",
  "Jinja2==3.1.3",
  "MarkupSafe==2.1.3",
  "packaging==23.2",
  "imagesize==1.4.1",
  "typing_extensions==4.7.1",
  "zipp==3.15.0",
  "pyld",
  "Markdown==3.4.3",
  "requests==2.31.0",
  "certifi==2023.11.17",
  "charset-normalizer==3.3.2",
  "idna==3.6",
  "urllib3==2.0.7",
  "pandoc",
]

[tool.ontology]
robot_version = "1.9.6"

[tool.hatch.build.targets.wheel]
# No Python package is shipped; this project just centralises shared tooling deps.
packages = []
